[tool.poetry]
name = "data-camp-courses"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
tensorflow = "^2.18.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
