[tool.poetry]
name = "data-camp"
version = "1.0"
description = "courses data scientist"
authors = ["FarellFahrozi"]
license = "farellfahrozi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
