[tool.poetry]
name = "data-camp"
version = "1.0"
description = "courses data scientist"
authors = ["FarellFahrozi"]
license = "farellfahrozi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
pandas = "1.3.4"
numpy = "^1.19.5"
seaborn = "0.11.2"
matplotlib = "3.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
